--- a/styles/index.css
+++ b/styles/index.css
@@ -21,7 +21,7 @@ main {
     font-family: 'Open Sans', sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.05);
 }
-h1 {
+/* h1 {
     margin-top: 0;
     padding-top: 0.67em;
 }
@@ -84,4 +84,4 @@ a:hover {
     #title-break {
         display: inline;
     }
-}
+} */
