--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
     background: linear-gradient(90deg, var(--background-gradient-left) 0%, var(--background-gradient-mid) 25%, var(--background-gradient-right)  100%);
 }
-main {
+/* main {
     color: var(--main-color);
     background-color: var(--main-background-color);
     max-width: 45rem;
@@ -20,7 +20,7 @@ main {
     margin: auto;
     font-family: 'Open Sans', sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.05);
-}
+} */
 /* h1 {
     margin-top: 0;
     padding-top: 0.67em;
