--- a/styles/index.css
+++ b/styles/index.css
@@ -10,17 +10,24 @@ html {
 }
 body {
     margin: 0;
+    height: 100vh;
+    width: 100vw;
     background: linear-gradient(90deg, var(--background-gradient-left) 0%, var(--background-gradient-mid) 25%, var(--background-gradient-right)  100%);
 }
-/* main {
-    color: var(--main-color);
-    background-color: var(--main-background-color);
+main {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
     max-width: 45rem;
     min-width: 300px;
     margin: auto;
     font-family: 'Open Sans', sans-serif;
+    color: var(--main-color);
+    background-color: var(--main-background-color);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.05);
-} */
+    padding: 0 2rem;
+}
 /* h1 {
     margin-top: 0;
     padding-top: 0.67em;
