--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@ main {
     max-width: 45rem;
     min-width: 300px;
     margin: auto;
-    font-family: 'Open Sans', sans-serif;
+/*     font-family: 'Open Sans', sans-serif; */
     color: var(--main-color);
     background-color: var(--main-background-color);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.05);
