--- a/styles/index.css
+++ b/styles/index.css
@@ -39,7 +39,7 @@ main {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.05);
     padding: 0 2rem;
 }
-/* h1 {
+h1 {
     margin-top: 0;
     padding-top: 0.67em;
 }
@@ -101,4 +101,4 @@ a:hover {
     #title-break {
         display: inline;
     }
-} */
+}
