--- a/styles/index.css
+++ b/styles/index.css
@@ -29,7 +29,7 @@ main {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
     max-width: 45rem;
     min-width: 300px;
     margin: auto;
