--- a/styles/index.css
+++ b/styles/index.css
@@ -19,12 +19,63 @@ html {
     --link-color: #6c6cc1;
     --highlight-color: #f3f3fd;
 }
+
+@property --hue1 {
+    syntax: "<angle>";
+    inherits: false;
+    initial-value: 0deg;
+}
+@property --hue2 {
+    syntax: "<angle>";
+    inherits: false;
+    initial-value: 0deg;
+}
+
+@property --lightness {
+    syntax: "<number>";
+    inherits: false;
+    initial-value: 0;
+}
+
+.gradient-background {
+    background-image: linear-gradient(
+        in oklch longer hue to right,
+        oklch(0.93 var(--lightness) var(--hue1) / 33%),
+        oklch(0.93 var(--lightness) var(--hue2) / 33%)
+      ),
+      linear-gradient(
+        in oklch longer hue to bottom left,
+        oklch(0.93 var(--lightness) var(--hue1) / 33%),
+        oklch(0.93 var(--lightness) var(--hue2) / 33%)
+      );
+
+    animation-name: anim_bg;
+    animation-duration: 2s;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes anim_bg {
+    0% {
+        --hue1: 230deg;
+        --hue2: 270deg;
+        --lightness: 0.01;
+    }
+
+    100% {
+        --hue1: 330deg;
+        --hue2: 370deg;
+        --lightness: 0.05;
+    }
+}
+
 body {
     margin: 0;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(90deg, var(--background-gradient-left) 0%, var(--background-gradient-mid) 25%, var(--background-gradient-right)  100%);
 }
+
 main {
     display: flex;
     justify-content: center;
@@ -73,17 +124,19 @@ a:hover {
     position: relative;
     z-index: 0;
 }
-.highlight:after {
+.highlight, gradient-background {
     content: "";
     display: inline-block;
     width: 104%;
     height: 40%;
     margin-right: 5px;
-    background: var(--highlight-color);
     position: absolute;
     left: -2%;
     bottom: 0;
     z-index: -1;
+
+    background-attachment: fixed;
+    background-size: 100%, 100%;
 }
 @media (prefers-color-scheme: dark) {
     html {
