--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,24 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@property --lightness {
+    syntax: "<number>";
+    inherits: true;
+    initial-value: 0;
+}
+
+@property --accent-hue {
+    syntax: "<number>";
+    inherits: true;
+    initial-value: 0;
+}
+
+@property --accent-offset {
+    syntax: "<number>";
+    inherits: true;
+    initial-value: 0;
+}
+
 html {
     --background-gradient-left: rgba(249,249,255,1);
     --background-gradient-mid: rgba(246,246,255,1);
@@ -18,35 +36,21 @@ html {
     --h1-bottom-border: rgb(211, 211, 211);
     --link-color: #6c6cc1;
     --highlight-color: #f3f3fd;
-}
 
-@property --hue1 {
-    syntax: "<angle>";
-    inherits: false;
-    initial-value: 0deg;
-}
-@property --hue2 {
-    syntax: "<angle>";
-    inherits: false;
-    initial-value: 0deg;
-}
-
-@property --lightness {
-    syntax: "<number>";
-    inherits: false;
-    initial-value: 0;
+    --accent-hue: 240;
+    --accent-offset: 0;
 }
 
 .gradient-background {
     background-image: linear-gradient(
         in oklch longer hue to right,
-        oklch(0.93 var(--lightness) var(--hue1) / 33%),
-        oklch(0.93 var(--lightness) var(--hue2) / 33%)
+        oklch(0.93 var(--lightness) var(--accent-hue) / 33%),
+        oklch(0.93 var(--lightness) calc(var(--accent-hue) + var(--accent-offset)) / 33%)
       ),
       linear-gradient(
         in oklch longer hue to bottom left,
-        oklch(0.93 var(--lightness) var(--hue1) / 33%),
-        oklch(0.93 var(--lightness) var(--hue2) / 33%)
+        oklch(0.93 var(--lightness) var(--accent-hue) / 33%),
+        oklch(0.93 var(--lightness) calc(var(--accent-hue) + var(--accent-offset)) / 33%)
       );
 
     animation-name: anim_bg;
@@ -58,14 +62,12 @@ html {
 
 @keyframes anim_bg {
     0% {
-        --hue1: 230deg;
-        --hue2: 270deg;
+        --accent-offset: 0;
         --lightness: 0.01;
     }
 
     100% {
-        --hue1: 330deg;
-        --hue2: 370deg;
+        --accent-offset: 10;
         --lightness: 0.05;
     }
 }
@@ -74,6 +76,41 @@ body {
     margin: 0;
     height: 100vh;
     width: 100vw;
+}
+
+.color-controls {
+    --control-height: 0.25rem;
+    --label-height: 0.5rem;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    font-size: var(--label-height);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    & input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+        background: transparent;
+    }
+
+    & input[type="range"]::-webkit-slider-runnable-track {
+        background: #0001;
+        height: var(--control-height);
+        margin: none;
+    }
+
+    & input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none; /* Override default look */
+        appearance: none;
+        margin-top: 0px; /* Centers thumb on the track */
+        background-color: oklch(0.6 0.17 var(--accent-hue));
+        height: var(--control-height);
+        width: calc(var(--control-height) * 2);    
+        cursor: pointer;
+    }
 }
 
 main {
@@ -109,7 +146,7 @@ footer {
 }
 a {
     text-decoration: none;
-    color: var(--link-color);
+    color: oklch(0.5 0.17 var(--accent-hue));
 }
 li:not(:first-child) {
     margin-top: 10px;
@@ -124,19 +161,17 @@ a:hover {
     position: relative;
     z-index: 0;
 }
-.highlight, gradient-background {
+.highlight:after {
     content: "";
     display: inline-block;
     width: 104%;
     height: 40%;
     margin-right: 5px;
+    background: oklch(0.94 0.07 var(--accent-hue));
     position: absolute;
     left: -2%;
     bottom: 0;
     z-index: -1;
-
-    background-attachment: fixed;
-    background-size: 100%, 100%;
 }
 @media (prefers-color-scheme: dark) {
     html {
